--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@jitsi/logger": "2.0.2",
     "@jitsi/precall-test": "1.0.6",
     "@jitsi/rtcstats": "9.7.0",
+    "@stomp/stompjs": "^7.0.0",
     "@testrtc/watchrtc-sdk": "1.38.2",
     "async-es": "3.2.4",
     "base64-js": "1.3.1",
@@ -28,6 +29,7 @@
     "lodash-es": "4.17.21",
     "patch-package": "6.5.1",
     "sdp-transform": "2.3.0",
+    "sockjs-client": "^1.6.1",
     "strophe.js": "1.5.0",
     "strophejs-plugin-disco": "0.0.2",
     "strophejs-plugin-stream-management": "git+https://github.com/jitsi/strophejs-plugin-stream-management#679be5902097ed612fb5062b5549f3f32b6f5f47",
@@ -40,6 +42,7 @@
     "@babel/preset-env": "7.16.0",
     "@babel/preset-typescript": "7.16.7",
     "@jitsi/eslint-config": "4.1.4",
+    "@stomp/stompjs": "^7.0.0",
     "@types/async": "3.2.12",
     "@types/jasmine": "4.0.3",
     "@types/lodash-es": "4.17.12",
@@ -55,6 +58,7 @@
     "karma-sourcemap-loader": "0.3.8",
     "karma-webpack": "5.0.0",
     "process": "0.11.10",
+    "sockjs-client": "^1.6.1",
     "string-replace-loader": "3.0.3",
     "typescript": "5.0.4",
     "webpack": "5.76.0",
