--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,16 @@
     "target": "ES2020",
     "module": "ES2020",
     "sourceMap": true,
+    "baseUrl": ".",
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "moduleResolution": "node",
+    "paths": {
+      "@jitsi/js-utils/*": [
+        "./node_modules/@jitsi/js-utils/dist/*"
+      ]
+    },
     "allowSyntheticDefaultImports": true,
     "lib": [
       "DOM",
